Media Engagement: in incognito, properly override regular profile data.

This is fixing a bug where methods returning all scores would
sometimes have two entries when the incognito profile received new MEI
related events. This is due to some unexpected behaviour from content
settings (in `GetSettingsForOneType`).

Bug: 807269
Change-Id: Id6b8be8ddd2dac6e1b1fec1922896d760e78d31f
Reviewed-on: https://chromium-review.googlesource.com/893260
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Commit-Queue: Mounir Lamouri (slow) <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532867}
Former-commit-id: 88f5b767023929735eb358d7dffba90e9c51be14